# docs/swagger.yaml
@@ -68,7 +68,7 @@ definitions:
     - currentPassword
     - newPassword
     type: object
-  rest.revokePermissionBody:
+  rest.grantPermissionBody:
     properties:
       permissions:
         items:
@@ -318,11 +318,32 @@ paths:
       - Seguridad
   /v1/users/:userID/grant:
     post:
+      consumes:
+      - application/json
+      description: Otorga permisos al usuario indicado, el usuario logueado tiene
+        que tener permiso "admin".
+      parameters:
+      - description: ID del usuario a habilitar permiso
+        in: path
+        name: userId
+        required: true
+        type: string
+      - description: bearer {token}
+        in: header
+        name: Authorization
+        required: true
+        type: string
+      - description: Permisos a Habilitar
+        in: body
+        name: body
+        required: true
+        schema:
+          $ref: '#/definitions/rest.grantPermissionBody'
+      produces:
+      - application/json
       responses:
         "200":
-          description: User Token
-          schema:
-            $ref: '#/definitions/rest.tokenResponse'
+          description: No Content
         "400":
           description: Bad Request
           schema:
@@ -339,13 +360,37 @@ paths:
           description: Internal Server Error
           schema:
             $ref: '#/definitions/app_errors.OtherErrors'
+      summary: Haiblitar permisos
+      tags:
+      - Seguridad
   /v1/users/:userID/revoke:
     post:
+      consumes:
+      - application/json
+      description: Quita permisos al usuario indicado, el usuario logueado tiene que
+        tener permiso "admin".
+      parameters:
+      - description: ID del usuario a quitar permiso
+        in: path
+        name: userId
+        required: true
+        type: string
+      - description: bearer {token}
+        in: header
+        name: Authorization
+        required: true
+        type: string
+      - description: Permisos a Qutiar
+        in: body
+        name: body
+        required: true
+        schema:
+          $ref: '#/definitions/rest.grantPermissionBody'
+      produces:
+      - application/json
       responses:
         "200":
-          description: User Token
-          schema:
-            $ref: '#/definitions/rest.revokePermissionBody'
+          description: No Content
         "400":
           description: Bad Request
           schema:
@@ -362,13 +407,31 @@ paths:
           description: Internal Server Error
           schema:
             $ref: '#/definitions/app_errors.OtherErrors'
+      summary: Quitar permisos
+      tags:
+      - Seguridad
   /v1/users/:userId/disable:
     post:
+      consumes:
+      - application/json
+      description: Deshabilita un usuario en el sistema. El usuario logueado debe
+        tener permisos "admin".
+      parameters:
+      - description: ID del usuario a deshabilitar
+        in: path
+        name: userId
+        required: true
+        type: string
+      - description: bearer {token}
+        in: header
+        name: Authorization
+        required: true
+        type: string
+      produces:
+      - application/json
       responses:
         "200":
-          description: User Token
-          schema:
-            $ref: '#/definitions/rest.tokenResponse'
+          description: No Content
         "400":
           description: Bad Request
           schema:
@@ -385,13 +448,31 @@ paths:
           description: Internal Server Error
           schema:
             $ref: '#/definitions/app_errors.OtherErrors'
+      summary: Deshabilitar Usuario
+      tags:
+      - Seguridad
   /v1/users/:userId/enable:
     post:
+      consumes:
+      - application/json
+      description: Habilita un usuario en el sistema. El usuario logueado debe tener
+        permisos "admin".
+      parameters:
+      - description: ID del usuario a habilitar
+        in: path
+        name: userId
+        required: true
+        type: string
+      - description: bearer {token}
+        in: header
+        name: Authorization
+        required: true
+        type: string
+      produces:
+      - application/json
       responses:
         "200":
-          description: User Token
-          schema:
-            $ref: '#/definitions/rest.tokenResponse'
+          description: No Content
         "400":
           description: Bad Request
           schema:
@@ -408,6 +489,9 @@ paths:
           description: Internal Server Error
           schema:
             $ref: '#/definitions/app_errors.OtherErrors'
+      summary: Enable User
+      tags:
+      - Seguridad
   /v1/users/current:
     get:
       consumes:
