# rest/post_users_id_revoke.go
@@ -17,15 +17,14 @@ import (
 //	@Param			userId			path	string				true	"ID del usuario a quitar permiso"
 //	@Param			Authorization	header	string				true	"bearer {token}"
 //	@Param			body			body	grantPermissionBody	true	"Permisos a Qutiar"
-
-// @Success	200	{object}	revokePermissionBody		"User Token"
+//	@Success		200				"No Content"
 //
-// @Failure	400	{object}	app_errors.ErrValidation	"Bad Request"
-// @Failure	401	{object}	app_errors.OtherErrors		"Unauthorized"
-// @Failure	404	{object}	app_errors.OtherErrors		"Not Found"
-// @Failure	500	{object}	app_errors.OtherErrors		"Internal Server Error"
+//	@Failure		400				{object}	app_errors.ErrValidation	"Bad Request"
+//	@Failure		401				{object}	app_errors.OtherErrors		"Unauthorized"
+//	@Failure		404				{object}	app_errors.OtherErrors		"Not Found"
+//	@Failure		500				{object}	app_errors.OtherErrors		"Internal Server Error"
 //
-// @Router		/v1/users/:userID/revoke [post]
+//	@Router			/v1/users/:userID/revoke [post]
 func postUsersIdRevokeRoute() {
 	engine.Router().POST(
 		"/v1/users/:userID/revoke",
